--- a/index.html
+++ b/index.html
@@ -12,5 +12,147 @@
 </head>
 <body>
     
+    <header>
+        <nav>
+            <a href="#" class="logo-link"><img src="#" alt="logo"></a>
+            <ul class="nav-links">
+                <li>
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Platform</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link selected">Pricing</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-cta">Request Demo</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Simple and Affordable Pricing for Everyone</h1>
+        <p>Get started with a 14-day free trial. No credit card required!</p>
+
+        <div class="pricing-container">
+            <h2>How many employees does your company have?</h2>
+            <div class="pricing-input">
+                <input type="range" min="1" max="5000" id="pricingSlider">
+                <input type="number" min="1" max="5000" id="pricingInput">
+            </div>
+            <p>Move the slider, or input number, to see your price</p>
+        </div>
+
+        <img src="#" alt="pricing-rocket">
+
+        <table>
+            <tr>
+                <th>Plans</th>
+                <th>Free</th>
+                <th>Premium</th>
+            </tr>
+            <tr>
+                <td>Pricing</td>
+                <td class="price-display">$0</td>
+                <td class="price-display" id="prcingDisplay">$10 <span>per user<br>billed annually*</span></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Get started for free</td>
+                <td>Get started <span class="premium">*price in USD</span></td>
+            </tr>
+            <tr>
+                <td>License</td>
+                <td>Free</td>
+                <td>Premium</td>
+            </tr>
+            <tr>
+                <td>100% White-Labeled Platform</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>Unlimited Training Content</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>Interactive Quizzes</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>Multi-tenant Management System</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>1Automated Training Campaigns</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>Automated Reminders</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td>Executive Reporting</td>
+                <td>✔️</td>
+                <td>✔️</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><button>Get Started for Free</button></td>
+                <td><button>Get Started</button></td>
+            </tr>
+        </table>
+        <section>
+            <h3>Request a Demo or Get in Touch</h3>
+            <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
+            
+            <form action="/" method="post">
+                <ul>
+                    <li>
+                        <input type="text" placeholder="Name" required>
+                    </li>
+                    <li>
+                        <input type="email" placeholder="Email" required>
+                    </li>
+                    <li>
+                        <select name="options" id="formDropdown">
+                            <option value="">Choose an Option</option>
+                            <option value="platform">I'm interested in the platform</option>
+                            <option value="platform">I'd like to request a demo</option>
+                            <option value="platform">I'm interested in signing up for the free trial</option>
+                        </select>
+                    </li>
+                </ul>
+                <ul>
+                    <li><input type="checkbox">I'd like to subscribe to the latest news updates</li>
+                    <li><button type="submit">SEND</button></li>
+                </ul>       
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <a href="#"><img src="#" alt="logo"></a>
+        <p>Copyright ©
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+            <a href="https://github.com/OkiDokiTokiLoki/abacus">OkiDokiTokiLoki</a>
+	    </p>
+    </footer>
+
 </body>
 </html>
