implement reset styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <header>
         <nav>
-            <a href="#" class="logo-link"><img src="#" alt="logo"></a>
+            <a href="#" class="logo-link"><img src="https://via.placeholder.com/350x100" alt="logo"></a>
             <ul class="nav-links">
                 <li>
                     <a href="#" class="nav-link">Home</a>
@@ -66,8 +66,8 @@
             </tr>
             <tr>
                 <td></td>
-                <td>Get started for free</td>
-                <td>Get started <span class="premium">*price in USD</span></td>
+                <td><button>Get started for free</button></td>
+                <td><button>Get started</button></td>
             </tr>
             <tr>
                 <td>License</td>
