header styling implement

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     
     <header>
         <nav>
-            <a href="#" class="logo-link"><img src="https://via.placeholder.com/350x100" alt="logo"></a>
             <ul class="nav-links">
+                <li>
+                    <a href="#" class="logo-link">
+                        <img src="https://via.placeholder.com/300x80" alt="logo">
+                    </a>
+                </li>
                 <li>
                     <a href="#" class="nav-link">Home</a>
                 </li>
