--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Move the slider, or input number, to see your price</p>
         </div>
 
-        <img src="#" alt="pricing-rocket">
+        <img src="https://via.placeholder.com/100x150" class="rocket" alt="pricing-rocket">
 
         <table>
             <tr>
@@ -119,7 +119,7 @@
                 <td><button>Get Started</button></td>
             </tr>
         </table>
-        <section>
+        <!-- <section>
             <h3>Request a Demo or Get in Touch</h3>
             <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
             
@@ -145,18 +145,18 @@
                     <li><button type="submit">SEND</button></li>
                 </ul>       
             </form>
-        </section>
+        </section> -->
     </main>
 
-    <footer>
-        <a href="#"><img src="#" alt="logo"></a>
+    <!-- <footer>
+        <a href="#"><img src="https://via.placeholder.com/200x100" alt="logo"></a>
         <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
             </script>
             <a href="https://github.com/OkiDokiTokiLoki/abacus">OkiDokiTokiLoki</a>
 	    </p>
-    </footer>
+    </footer> -->
 
 </body>
 </html>
