--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li>
                     <a href="#" class="nav-link">About</a>
                 </li>
-                <li>
+                <li class="li-cta">
                     <a href="#" class="nav-cta">Request Demo</a>
                 </li>
             </ul>
