table styling update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2>How many employees does your company have?</h2>
             <div class="pricing-input">
                 <input type="range" min="1" max="5000" id="rangeInput">
-                <input type="number" min="1" max="5000" id="employeeCount" placeholder="500">
+                <input type="number" min="1" max="5000" id="employeeCount" placeholder="2500">
             </div>
             <p>Move the slider, or input number, to see your price</p>
         </div>
@@ -66,7 +66,7 @@
             <tr>
                 <td>Pricing</td>
                 <td class="price-display">$0</td>
-                <td class="price-display" id="planAmount">$10<span> per user<br>billed annually*</span></td>
+                <td class="price-cell"><span class="price-display" id="planAmount">$5</span><span class="price-span"> per user<br>billed annually*</span></td>
             </tr>
             <tr>
                 <td></td>
@@ -76,7 +76,7 @@
             <tr>
                 <td>License</td>
                 <td>Free</td>
-                <td>Premium</td>
+                <td>Pro</td>
             </tr>
             <tr>
                 <td>100% White-Labeled Platform</td>
@@ -119,7 +119,7 @@
                 <td><button>Get Started</button></td>
             </tr>
         </table>
-        <!-- <section>
+        <section>
             <h3>Request a Demo or Get in Touch</h3>
             <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
             
@@ -145,7 +145,7 @@
                     <li><button type="submit">SEND</button></li>
                 </ul>       
             </form>
-        </section> -->
+        </section>
     </main>
 
     <!-- <footer>
