table styling update

--- a/index.html
+++ b/index.html
@@ -114,12 +114,11 @@
                 <td>✓</td>
             </tr>
             <tr>
-                <td></td>
                 <td><button>Get Started for Free</button></td>
                 <td><button>Get Started</button></td>
             </tr>
         </table>
-        <section>
+        <!-- <section>
             <h3>Request a Demo or Get in Touch</h3>
             <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
             
@@ -145,7 +144,7 @@
                     <li><button type="submit">SEND</button></li>
                 </ul>       
             </form>
-        </section>
+        </section> -->
     </main>
 
     <!-- <footer>
