slider variables update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <tr>
                 <td>Pricing</td>
                 <td class="price-display">$0</td>
-                <td class="price-cell"><span class="price-display" id="planAmount">$5</span><span class="price-span"> per user<br>billed annually*</span></td>
+                <td class="price-cell"><span class="price-display" id="priceDisplay">$5.00</span><span class="price-span"> per user<br>billed annually*</span></td>
             </tr>
             <tr>
                 <td></td>
