table styling and alignment

--- a/index.html
+++ b/index.html
@@ -75,49 +75,71 @@
             </tr>
             <tr>
                 <td>License</td>
-                <td>Free</td>
-                <td>Pro</td>
+                <td class="tick">Free</td>
+                <td class="tick">Pro</td>
             </tr>
             <tr>
                 <td>100% White-Labeled Platform</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
                 <td>Unlimited Training Content</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
                 <td>Interactive Quizzes</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
                 <td>Multi-tenant Management System</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
-                <td>1Automated Training Campaigns</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td>Automated Training Campaigns</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
                 <td>Automated Reminders</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
                 <td>Executive Reporting</td>
-                <td>✓</td>
-                <td>✓</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
             </tr>
             <tr>
-                <td><button>Get Started for Free</button></td>
-                <td><button>Get Started</button></td>
+                <td>Custom Campaign Templates</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
+            </tr>
+            <tr>
+                <td>Just-In-Time Training</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
+            </tr>
+            <tr>
+                <td>Automated Reminders</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
+            </tr>
+            <tr>
+                <td>Learning Support Center</td>
+                <td class="tick">✓</td>
+                <td class="tick">✓</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td style="text-align: center;"><button>Get Started for Free</button></td>
+                <td style="text-align: center;"><button>Get Started</button></td>
             </tr>
         </table>
+
         <!-- <section>
             <h3>Request a Demo or Get in Touch</h3>
             <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
