--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
             </tr>
         </table>
 
-        <!-- <section>
+        <section>
             <h3>Request a Demo or Get in Touch</h3>
             <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
             
             <form action="/" method="post">
-                <ul>
+                <ul class="form-top">
                     <li>
                         <input type="text" placeholder="Name" required>
                     </li>
@@ -161,12 +161,12 @@
                         </select>
                     </li>
                 </ul>
-                <ul>
+                <ul class="form-bottom">
                     <li><input type="checkbox">I'd like to subscribe to the latest news updates</li>
                     <li><button type="submit">SEND</button></li>
                 </ul>       
             </form>
-        </section> -->
+        </section>
     </main>
 
     <!-- <footer>
