dynamic feedback and section styling update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <img src="https://via.placeholder.com/100x150" class="rocket" alt="pricing-rocket">
 
-        <table>
+        <!-- <table>
             <tr>
                 <th>Plans</th>
                 <th>Free</th>
@@ -138,7 +138,7 @@
                 <td style="text-align: center;"><button>Get Started for Free</button></td>
                 <td style="text-align: center;"><button>Get Started</button></td>
             </tr>
-        </table>
+        </table> -->
 
         <section>
             <h3>Request a Demo or Get in Touch</h3>
