--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                     </li>
                     <li>
                         <select name="options" id="formDropdown">
-                            <option value="">Choose an Option</option>
-                            <option value="platform">I'm interested in the platform</option>
-                            <option value="platform">I'd like to request a demo</option>
-                            <option value="platform">I'm interested in signing up for the free trial</option>
+                            <option selected disabled value="">Choose an Option</option>
+                            <option value="platform">About the platform</option>
+                            <option value="platform">Request a demo</option>
+                            <option value="platform">Sign up for the free trial</option>
                         </select>
                     </li>
                 </ul>
