add new asset and positioning

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Move the slider, or input number, to see your price</p>
         </div>
 
-        <img src="https://via.placeholder.com/100x150" class="rocket" alt="pricing-rocket">
+        <img src="./rocket.png" class="rocket" alt="pricing-rocket">
 
         <table>
             <tr>
