root and typography stying

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <td class="tick">Pro</td>
             </tr>
             <tr>
-                <td>100% White-Labeled Platform</td>
+                <td>Fully White-Labeled Platform</td>
                 <td class="tick">✓</td>
                 <td class="tick">✓</td>
             </tr>
