footer and typography styling

--- a/index.html
+++ b/index.html
@@ -169,15 +169,14 @@
         </section>
     </main>
 
-    <!-- <footer>
-        <a href="#"><img src="https://via.placeholder.com/200x100" alt="logo"></a>
+    <footer style="text-align: center;">
         <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
             </script>
             <a href="https://github.com/OkiDokiTokiLoki/abacus">OkiDokiTokiLoki</a>
 	    </p>
-    </footer> -->
+    </footer>
 
 </body>
 </html>
