--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <script>
                 document.write(new Date().getFullYear())
             </script>
-            <a href="https://github.com/OkiDokiTokiLoki/abacus">OkiDokiTokiLoki</a>
+            <a href="https://github.com/OkiDokiTokiLoki/abacus" style="text-decoration: none;">OkiDokiTokiLoki</a>
 	    </p>
     </footer>
 
