footer typo fix

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </li>
                 </ul>
                 <ul class="form-bottom">
-                    <li><input type="checkbox">I'd like to subscribe to the latest news updates</li>
+                    <li><input type="checkbox" checked>I'd like to subscribe to the latest news updates</li>
                     <li><button type="submit">SEND</button></li>
                 </ul>       
             </form>
@@ -175,7 +175,7 @@
             <script>
                 document.write(new Date().getFullYear())
             </script>
-            <a href="https://github.com/OkiDokiTokiLoki/abacus" style="text-decoration: none;">OkiDokiTokiLoki</a>
+            <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;">OkiDokiTokiLoki</a>
 	    </p>
     </footer>
 
