--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
     </main>
 
     <footer style="text-align: center;">
-        <p>Copyright ©
+        <p>©
             <script>
                 document.write(new Date().getFullYear())
             </script>
-            <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;">OkiDokiTokiLoki</a>
+            <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;" target="_blank">OkiDokiTokiLoki</a>
 	    </p>
     </footer>
 
