--- a/index.html
+++ b/index.html
@@ -1,190 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="./fav.ico">
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
+        <link rel="icon" type="image/x-icon" href="./fav.ico">
+        <link rel="stylesheet" href="./style.css">
+        <script src="./script.js" defer></script>
 
-    <title>Pricing</title>
-</head>
+        <title>Pricing</title>
+    </head>
 
-<body>
-    <header>
-        <nav class="d-flex align-items-center justify-content-between">
-            <ul class="d-flex align-items-center justify-content-between">
-                <li>
-                    <a href="#" class="logo-link">
-                        <img src="https://via.placeholder.com/300x80" alt="logo">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link">Platform</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link selected">Pricing</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="li-cta">
-                    <a href="#" class="nav-cta">Request Demo</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <div class="d-md-none overlay"></div>
 
-    <main class="d-flex flex-column align-items-center">
-        <h1>Simple and Affordable Pricing for Everyone</h1>
-        <p>Get started with a 14-day free trial. No credit card required!</p>
+        <main class="d-none d-md-block">
+            <header>
+                <nav class="d-flex align-items-center justify-content-between">
+                    <ul class="d-flex align-items-center justify-content-between">
+                        <li>
+                            <a href="#" class="logo-link">
+                                <img src="https://via.placeholder.com/300x80" alt="logo">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Home</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Platform</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link selected">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li class="li-cta">
+                            <a href="#" class="nav-cta">Request Demo</a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
 
-        <div class="pricing-container d-flex flex-column justify-content-around">
-            <h2>How many employees does your company have?</h2>
-            <div class="pricing-input d-flex">
-                <input type="range" min="1" max="5000" id="rangeInput">
-                <input type="number" min="1" max="5000" id="employeeCount" placeholder="2500">
+            <div class="d-flex flex-column align-items-center main">
+                <h1>Simple and Affordable Pricing for Everyone</h1>
+                <p>Get started with a 14-day free trial. No credit card required!</p>
+
+                <div class="pricing-container d-flex flex-column justify-content-around">
+                    <h2>How many employees does your company have?</h2>
+                    <div class="pricing-input d-flex">
+                        <input type="range" min="1" max="5000" id="rangeInput">
+                        <input type="number" min="1" max="5000" id="employeeCount" placeholder="2500">
+                    </div>
+                    <p>Move the slider, or input number, to see your price</p>
+                </div>
+
+                <img src="./rocket.png" class="rocket" alt="pricing-rocket">
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Plans</th>
+                            <th>Free</th>
+                            <th>Premium</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th class="product-heading">Pricing</th>
+                            <td class="price-display">$0</td>
+                            <td class="price-cell">
+                                <span class="price-display" id="priceDisplay">$5.00</span>
+                                <span class="price-span"> per user<br>billed annually*</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><button>Get started for free</button></td>
+                            <td><button>Get started</button></td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">License</th>
+                            <td class="bold">Free</td>
+                            <td class="bold">Pro</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Fully White-Labeled Platform</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Unlimited Training Content</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Interactive Quizzes</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Multi-tenant Management System</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Automated Training Campaigns</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Automated Reminders</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Executive Reporting</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Custom Campaign Templates</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Just-In-Time Training</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Automated Reminders</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <th class="product-heading">Learning Support Center</th>
+                            <td>✓</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><button>Get Started for Free</button></td>
+                            <td><button>Get Started</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <section class="d-flex flex-column align-items-center justify-content-center">
+                    <h3>Request a Demo or Get in Touch</h3>
+                    <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
+                    
+                    <form action="/" method="post">
+                        <ul class="form-top d-flex justify-content-center">
+                            <li>
+                                <input type="text" placeholder="Name" required>
+                            </li>
+                            <li>
+                                <input type="email" placeholder="Email" required>
+                            </li>
+                            <li>
+                                <select name="options" id="formDropdown">
+                                    <option selected disabled value="">Choose an Option</option>
+                                    <option value="platform">About the platform</option>
+                                    <option value="platform">Request a demo</option>
+                                    <option value="platform">Sign up for the free trial</option>
+                                </select>
+                            </li>
+                        </ul>
+                        <ul class="form-bottom d-flex flex-column align-items-center">
+                            <li><input type="checkbox" checked>I'd like to subscribe to the latest news updates</li>
+                            <li><button type="submit" class="uppercase">Send</button></li>
+                        </ul>       
+                    </form>
+                </section>
             </div>
-            <p>Move the slider, or input number, to see your price</p>
-        </div>
 
-        <img src="./rocket.png" class="rocket" alt="pricing-rocket">
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Plans</th>
-                    <th>Free</th>
-                    <th>Premium</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th class="product-heading">Pricing</th>
-                    <td class="price-display">$0</td>
-                    <td class="price-cell">
-                        <span class="price-display" id="priceDisplay">$5.00</span>
-                        <span class="price-span"> per user<br>billed annually*</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><button>Get started for free</button></td>
-                    <td><button>Get started</button></td>
-                </tr>
-                <tr>
-                    <th class="product-heading">License</th>
-                    <td class="bold">Free</td>
-                    <td class="bold">Pro</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Fully White-Labeled Platform</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Unlimited Training Content</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Interactive Quizzes</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Multi-tenant Management System</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Automated Training Campaigns</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Automated Reminders</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Executive Reporting</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Custom Campaign Templates</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Just-In-Time Training</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Automated Reminders</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <th class="product-heading">Learning Support Center</th>
-                    <td>✓</td>
-                    <td>✓</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><button>Get Started for Free</button></td>
-                    <td><button>Get Started</button></td>
-                </tr>
-            </tbody>
-        </table>
-
-        <section class="d-flex flex-column align-items-center justify-content-center">
-            <h3>Request a Demo or Get in Touch</h3>
-            <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
-            
-            <form action="/" method="post">
-                <ul class="form-top d-flex justify-content-center">
-                    <li>
-                        <input type="text" placeholder="Name" required>
-                    </li>
-                    <li>
-                        <input type="email" placeholder="Email" required>
-                    </li>
-                    <li>
-                        <select name="options" id="formDropdown">
-                            <option selected disabled value="">Choose an Option</option>
-                            <option value="platform">About the platform</option>
-                            <option value="platform">Request a demo</option>
-                            <option value="platform">Sign up for the free trial</option>
-                        </select>
-                    </li>
-                </ul>
-                <ul class="form-bottom d-flex flex-column align-items-center">
-                    <li><input type="checkbox" checked>I'd like to subscribe to the latest news updates</li>
-                    <li><button type="submit" class="uppercase">Send</button></li>
-                </ul>       
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>©
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;" target="_blank">OkiDokiTokiLoki</a>
-	    </p>
-    </footer>
-
-</body>
+            <footer>
+                <p>©
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;" target="_blank">OkiDokiTokiLoki</a>
+                </p>
+            </footer>
+        </main>
+    </body>
 </html>
