--- a/index.html
+++ b/index.html
@@ -13,44 +13,46 @@
     </head>
 
     <body>
-        <div class="d-md-none overlay"></div>
+        <div class="d-desktop-none overlay"></div>
 
-        <main class="d-none d-md-block">
+        <main class="d-none d-desktop-block">
             <header>
                 <nav class="d-flex align-items-center justify-content-between">
-                    <ul class="d-flex align-items-center justify-content-between">
+                    <ul class="d-flex align-items-center justify-content-around">
                         <li>
-                            <a href="#" class="logo-link">
-                                <img src="https://via.placeholder.com/300x80" alt="logo">
+                            <a class="logo-link" role="button">
+                                <img class="d-lg-none" src="https://via.placeholder.com/150x80" alt="logo">
+                                <img class="d-none d-lg-block" src="https://via.placeholder.com/300x80" alt="logo">
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">Home</a>
+                            <a class="nav-link" role="button">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">Platform</a>
+                            <a class="nav-link" role="button">Platform</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link selected">Pricing</a>
+                            <a class="nav-link selected" role="button">Pricing</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">Blog</a>
+                            <a class="nav-link" role="button">Blog</a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">About</a>
+                            <a class="nav-link" role="button">About</a>
                         </li>
                         <li class="li-cta">
-                            <a href="#" class="nav-cta">Request Demo</a>
+                            <a class="nav-cta" role="button">Request Demo</a>
                         </li>
                     </ul>
                 </nav>
             </header>
 
-            <div class="d-flex flex-column align-items-center main">
+            <!-- <div class="d-grid main"> -->
+            <div class="main">
                 <h1>Simple and Affordable Pricing for Everyone</h1>
                 <p>Get started with a 14-day free trial. No credit card required!</p>
 
-                <div class="pricing-container d-flex flex-column justify-content-around">
+                <div class="pricing-container d-grid">
                     <h2>How many employees does your company have?</h2>
                     <div class="pricing-input d-flex">
                         <input type="range" min="1" max="5000" id="rangeInput">
@@ -75,7 +77,7 @@
                             <td class="price-display">$0</td>
                             <td class="price-cell">
                                 <span class="price-display" id="priceDisplay">$5.00</span>
-                                <span class="price-span"> per user<br>billed annually*</span>
+                                <span class="price-span">per user<br>billed annually*</span>
                             </td>
                         </tr>
                         <tr>
@@ -151,8 +153,8 @@
                     </tbody>
                 </table>
 
-                <section class="d-flex flex-column align-items-center justify-content-center">
-                    <h3>Request a Demo or Get in Touch</h3>
+                <section class="">
+                    <h3>Request a Demo or Get in Touch</h3><br>
                     <p>Chat with one of our advisors to get a personalised tour of our platform, answers to any of your questions, and learn how we can help you.</p>
                     
                     <form action="/" method="post">
@@ -172,7 +174,7 @@
                                 </select>
                             </li>
                         </ul>
-                        <ul class="form-bottom d-flex flex-column align-items-center">
+                        <ul class="form-bottom">
                             <li><input type="checkbox" checked>I'd like to subscribe to the latest news updates</li>
                             <li><button type="submit" class="uppercase">Send</button></li>
                         </ul>       
