--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <link rel="icon" type="image/x-icon" href="./fav.ico">
         <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
         <script src="./dist/script.js" defer></script>
 
         <title>Pricing</title>
@@ -177,12 +178,7 @@
             </div>
 
             <footer>
-                <p>©
-                    <script>
-                        document.write(new Date().getFullYear())
-                    </script>
-                    <a href="https://github.com/OkiDokiTokiLoki/pricing-page" style="text-decoration: none;" target="_blank">OkiDokiTokiLoki</a>
-                </p>
+                &copy; <a href="https://github.com/OkiDokiTokiLoki/pricing-page">OkiDokiTokiLoki</a>
             </footer>
         </main>
     </body>
